--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+    <head>
+        <meta charset="utf-8" >
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/10456/10456439.png">
+         <title>SRIDA PW</title>
+    </head>
     <body>
         <h1>
             <p>
