--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ I’m also someone who values creativity. Whether it's designing a layout, comin
                 <div style="width:70%; height:60%;background-color:white; margin-left:13%; margin-top:10%; border:1px; border-radius:20px; overflow: hidden;">
                       <p style="font-size:xx-large; margin-top:10%;margin-left:10%; margin-bottom:1%">LET'S CONNECT:<br></p>
                       <span style="font-size: medium;margin-left:10%">Feel free to reach out for collaborations, freelance work, or just to say hi!</span>
-                      <br><p style="margin-left:10%">Email:<br><a href="https://mail.google.com/mail/?view=cm&fs=1&to=example@gmail.com" target="_blank" class="email-button">Send me</a></p>
+                      <br><p style="margin-left:10%">Email:<br><a href="https://mail.google.com/mail/?view=cm&fs=1&to=sridashanmukha@gmail.com" target="_blank" class="email-button">Send me</a></p>
                       <p style="margin-left:10%">Phone number<br>+91000000000</p>
                       <p style="margin-left:10%">Address<br>NITK Surathkal<br>Manguluru,Karnataka<br>575025</p>
 
