--- a/index.html
+++ b/index.html
@@ -477,10 +477,10 @@ I’m also someone who values creativity. Whether it's designing a layout, comin
              </div>
              <div id="TEST">
             
-                <p style="font-size:xx-large; margin-top:5%;color:white;">WHAT <span style="color:rgb(228, 6, 228);">CLIENTS SAY:</span></p>
+                <p style="font-size:xx-large; margin-top:5%;color:white;">WHAT <span style="color:rgb(228, 6, 228);">MENTORS SAY:</span></p>
                  <div class="te">
                 <div>
-                Srida consistently delivers high-quality and innovative solutions that go well beyond project requirements. Her technical proficiency is matched by her problem-solving mindset, which has helped us overcome numerous complex challenges. John is not just task-focused — she understands the bigger picture, aligns her efforts with project goals, and communicates effectively across teams. It’s rare to find someone who combines creativity, precision, and reliability so seamlessly. She’s been a key contributor to our project’s success and a pleasure to collaborate with.
+                Srida consistently delivers high-quality and innovative solutions that go well beyond project requirements. Her technical proficiency is matched by her problem-solving mindset, which has helped us overcome numerous complex challenges. Srida is not just task-focused — she understands the bigger picture, aligns her efforts with project goals, and communicates effectively across teams. It’s rare to find someone who combines creativity, precision, and reliability so seamlessly. She’s been a key contributor to our project’s success and a pleasure to collaborate with.
                  <br><p>XXYX<br>Product Manager</p>
                 </div>
                  <div>
