--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ I’m also someone who values creativity. Whether it's designing a layout, comin
                  <br><p>XXYX<br>Product Manager</p>
                 </div>
                  <div>
-                  Working with Srida has been an eye-opening experience. Her approach to solving complex frontend issues is not only methodical but also incredibly efficient. Whether it’s debugging tricky layout bugs or optimizing performance, she always finds the right balance between speed and quality. More than that, her collaborative nature and clear communication make even the most difficult tasks feel manageable. John has truly been instrumental in shaping a smooth development workflow, and I’ve learned a lot from her calm and strategic thinking.
+                  Working with Srida has been an eye-opening experience. Her approach to solving complex frontend issues is not only methodical but also incredibly efficient. Whether it’s debugging tricky layout bugs or optimizing performance, she always finds the right balance between speed and quality. More than that, her collaborative nature and clear communication make even the most difficult tasks feel manageable. She has truly been instrumental in shaping a smooth development workflow, and I’ve learned a lot from her calm and strategic thinking.
                  <br><p>XXYY<br>Product Manager</p>
                 </div>
               </div>
